[workspace]
members = ["derive"]

[package]
name = "serde_alloc"
version = "0.1.0-alpha.3"
edition = "2024"
description = "Deserialize using serde with a custom allocator"
license = "MIT"

[dependencies]
serde_core = "1"
serde_alloc_derive = { path = "derive", version = "=0.1.0-alpha.3" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
